--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -44,7 +44,7 @@ stages:
             inputs:
               command: 'publish'
               publishWebProjects: true
-              arguments: '-- configuration $(buildConfiguration) --output $(Build.ArtifactStagingDirectory)'
+              arguments: '-- configuration $(buildConfiguration)'
               zipAfterPublish: true
 
           - task: PublishBuildArtifacts@1
