--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,23 +12,43 @@ pool:
 variables:
   buildConfiguration: 'Release'
 
-steps:
+stages:
+  - stage: Build
+    jobs:
+      - job: Restore
+        steps:
+          - task: DotNetCoreCLI@2
+            inputs:
+              command: 'restore'
+              projects: '**/WebApp.csproj'
 
-- task: DotNetCoreCLI@2
-  displayName: Restore Nuget Packages
-  inputs:
-    command: restore
-    projects: '**/WebApp.csproj'
+          - task: DotNetCoreCLI@2
+            inputs:
+              command: 'build'
+              projects: '**/WebApp.csproj'
+              arguments: '--configuration $(buildConfiguration)'
 
-- task: DotNetCoreCLI@2
-  displayName: Create Web App Package (.zip)
-  inputs:
-    command: publish
-    publishWebProjects: True
-    arguments: '--configuration $(BuildConfiguration) --output $(build.artifactstagingdirectory)'
-    zipAfterPublish: True
+      - job: Test
+        steps:
+          - task: DotNetCoreCLI@2
+            inputs:
+              command: 'test'
+              projects: '**/*UnitTest*.csproj'
+              
+  - stage: Publish
+    jobs:
+      - job:
+        steps:
+          - task: DotNetCoreCLI@2
+            displayName: Create WebApp package (.zip)
+            inputs:
+              command: 'publish'
+              publishWebProjects: true
+              arguments: '-- configuration $(buildConfiguration) --output $(Build.ArtifactStagingDirectory)'
+              zipAfterPublish: true
 
-- task: PublishBuildArtifacts@1
-  displayName: 'Publish Artifact (WebApp.zip)'
-  inputs:
-    PathtoPublish: '$(build.artifactstagingdirectory)'
+          - task: PublishBuildArtifacts@1
+            inputs:
+              PathtoPublish: '$(Build.ArtifactStagingDirectory)'
+              ArtifactName: 'drop'
+              publishLocation: 'Container'
